--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
 		<tag/>
 		<url/>
 	</scm>
+	<packaging>pom</packaging>
+	<modules>
+		<module>service-user</module>
+		<module>service-config-server</module>
+		<module>service-eureka</module>
+		<module>service-gateway</module>
+		<module>service-padel-match</module>
+	</modules>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -57,6 +65,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.36</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
