--- a/service-config-server/src/main/resources/configurations/msvc-gateway.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-gateway.yml
@@ -26,3 +26,7 @@ spring:
           uri: lb://msvc-padel-court
           predicates:
             - Path=/padel-court/**
+        - id: match-user
+          uri: lb://msvc-match-user
+          predicates:
+            - Path=/match-user/**
