ADD AuthUser Controller and Service.

--- a/service-config-server/src/main/resources/configurations/msvc-gateway.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-gateway.yml
@@ -30,3 +30,7 @@ spring:
           uri: lb://msvc-match-user
           predicates:
             - Path=/match-user/**
+        - id: auth
+          uri: lb://msvc-auth
+          predicates:
+            - Path=/auth/**
