ADD AuthFilter in Gateway.

--- a/service-config-server/src/main/resources/configurations/msvc-gateway.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-gateway.yml
@@ -26,6 +26,8 @@ spring:
           uri: lb://msvc-padel-court
           predicates:
             - Path=/padel-court/**
+          filters:
+            - AuthFilter
         - id: match-user
           uri: lb://msvc-match-user
           predicates:
