--- a/service-config-server/src/main/resources/configurations/msvc-eureka.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-eureka.yml
@@ -7,9 +7,9 @@ spring:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: msvc-eureka
   client:
     register-with-eureka: false
     fetch-registry: false
     server-url:
-      defaultZone: http://localhost:${server.port}/eureka/
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
