--- a/service-config-server/src/main/resources/configurations/msvc-user.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-user.yml
@@ -18,7 +18,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: msvc-eureka
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
