--- a/service-user/pom.xml
+++ b/service-user/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.mls.service.user</groupId>
 	<artifactId>service-user</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>service-user</name>
 	<description>Spring Boot Service User</description>
 	<url/>
