--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
     ports:
       - "8081:8081"         # host:container
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://msvc-user-db:3306/padel_user_service_db?createDatabaseIfNotExist=true
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=Zug55357
+      - DB_URL=jdbc:mysql://msvc-user-db:3306/padel_user_service_db?createDatabaseIfNotExist=true
+      - DB_USER=root
+      - DB_PASS=Zug55357
       - CONFIG_SERVER_HOST=config-server
     depends_on:
       config-server:
@@ -53,7 +53,40 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql-user-db-data:/var/lib/mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
+  msvc-padel-court: #Name of the msvc from application.yml
+    build: ./service-padel-court  # Route of Dockerfile
+    ports:
+      - "8083:8083"         # host:container
+    environment:
+      - DB_URL=jdbc:mysql://msvc-padel-court-db:3306/padel_padel_court_service_db?createDatabaseIfNotExist=true
+      - DB_USER=root
+      - DB_PASS=Zug55357
+      - CONFIG_SERVER_HOST=config-server
+    depends_on:
+      config-server:
+        condition: service_healthy
+      msvc-eureka:
+        condition: service_healthy
+      msvc-padel-court-db:
+        condition: service_healthy
+
+  msvc-padel-court-db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: Zug55357
+      MYSQL_DATABASE: padel_padel_court_service_db
+    ports:
+      - "3308:3306"
+    volumes:
+      - mysql-padel-court-db-data:/var/lib/mysql
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       interval: 10s
@@ -62,4 +95,5 @@ services:
 
 
 volumes:
-  mysql-data:
+  mysql-padel-court-db-data:
+  mysql-user-db-data:
