ADD Dockerfiles and docker-compose configuration for msvc-gateway & msvc-auth.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
-
   config-server:
     build: ./service-config-server
     ports:
       - "8888:8888"
-    environment:
-      - EUREKA_HOST=msvc-eureka
+    networks:
+      - spring
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8888/actuator/health" ]
       interval: 10s
@@ -18,11 +17,38 @@ services:
       - "8761:8761"
     environment:
       - CONFIG_SERVER_HOST=config-server
+    networks:
+      - spring
     depends_on:
       config-server:
         condition: service_healthy
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  msvc-gateway:
+    build: ./service-gateway
+    ports:
+      - "8080:8080"
+    environment:
+      - CONFIG_SERVER_HOST=config-server
+    networks:
+      - spring
+    depends_on:
+      config-server:
+        condition: service_healthy
+      msvc-eureka:
+        condition: service_healthy
+      msvc-user:
+        condition: service_healthy
+      msvc-auth:
+        condition: service_healthy
+      msvc-padel-court:
+        condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -36,6 +62,8 @@ services:
       - DB_USER=root
       - DB_PASS=Zug55357
       - CONFIG_SERVER_HOST=config-server
+    networks:
+      - spring
     depends_on:
       config-server:
         condition: service_healthy
@@ -69,6 +97,8 @@ services:
       - DB_USER=root
       - DB_PASS=Zug55357
       - CONFIG_SERVER_HOST=config-server
+    networks:
+      - spring
     depends_on:
       config-server:
         condition: service_healthy
@@ -93,7 +123,48 @@ services:
       timeout: 5s
       retries: 10
 
+  msvc-auth:
+    build: ./service-auth
+    ports:
+      - "8086:8086"
+    environment:
+      - DB_URL=jdbc:mysql://msvc-auth-db:3306/padel_auth_service_db?createDatabaseIfNotExist=true
+      - DB_USER=root
+      - DB_PASS=Zug55357
+      - JWT_SECRET_KEY=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c272e007b
+      - CONFIG_SERVER_HOST=config-server
+    networks:
+      - spring
+    depends_on:
+      config-server:
+        condition: service_healthy
+      msvc-eureka:
+        condition: service_healthy
+      msvc-auth-db:
+        condition: service_healthy
+
+  msvc-auth-db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: Zug55357
+      MYSQL_DATABASE: padel_auth_service_db
+    ports:
+      - "3309:3306"
+    volumes:
+      - mysql-auth-db-data:/var/lib/mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+
 
 volumes:
   mysql-padel-court-db-data:
   mysql-user-db-data:
+  mysql-auth-db-data:
+
+networks:
+  spring:
+    driver: bridge
