--- a/service-config-server/src/main/resources/configurations/msvc-eureka.yml
+++ b/service-config-server/src/main/resources/configurations/msvc-eureka.yml
@@ -7,7 +7,7 @@ spring:
 
 eureka:
   instance:
-    hostname: msvc-eureka
+    hostname: ${EUREKA_HOST:localhost}
   client:
     register-with-eureka: false
     fetch-registry: false
