--- a/service-eureka/src/main/resources/application.yml
+++ b/service-eureka/src/main/resources/application.yml
@@ -1,5 +1,18 @@
+server:
+  port: 8761
+
 spring:
   application:
     name: msvc-eureka
-  config:
-    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+  cloud:
+    config:
+      enabled: false
+
+eureka:
+  instance:
+    hostname: ${EUREKA_HOST:localhost}
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    server-url:
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
