--- a/service-padel-court/src/main/resources/application.yml
+++ b/service-padel-court/src/main/resources/application.yml
@@ -1,5 +1,27 @@
 spring:
   application:
     name: msvc-padel-court
-  config:
-    import: optional:configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+  cloud:
+    config:
+      enabled: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/padel_padel_court_service_db?createDatabaseIfNotExist=true
+    username: root
+    password: Zug55357
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+server:
+  port: 8083
+
+eureka:
+  instance:
+    hostname: ${EUREKA_HOST:localhost}
+  client:
+    service-url:
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
