--- a/service-eureka/src/main/resources/application.yml
+++ b/service-eureka/src/main/resources/application.yml
@@ -12,6 +12,8 @@ eureka:
   instance:
     hostname: ${EUREKA_HOST:localhost}
   client:
+    healthcheck:
+      enabled: true
     register-with-eureka: false
     fetch-registry: false
     server-url:
