--- a/service-padel-match/pom.xml
+++ b/service-padel-match/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.mls.service.padel-match</groupId>
 	<artifactId>service-padel-match</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>service-padel-match</name>
 	<description>Spring Boot Service Padel Match</description>
 	<url/>
@@ -74,12 +74,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.mls.service.user</groupId>
-            <artifactId>service-user</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 	<dependencyManagement>
