--- a/service-match-user/src/main/resources/application.yml
+++ b/service-match-user/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
     config:
       enabled: false
   datasource:
-    url: jdbc:mysql://localhost:3306/padel_match_user_service_db?createDatabaseIfNotExist=true
-    username: root
-    password: Zug55357
+    url: ${MATCH_USER_MSVC_DB_URL}
+    username: ${MATCH_USER_MSVC_DB_USER}
+    password: ${MATCH_USER_MSVC_DB_PASS}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
