--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -2,8 +2,11 @@ server:
   port: 8080
 
 eureka:
+  instance:
+    hostname: ${EUREKA_HOST:localhost}
   client:
-    register-with-eureka: false
+    service-url:
+      defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
 
 spring:
   application:
