--- a/service-auth/src/main/resources/application.yml
+++ b/service-auth/src/main/resources/application.yml
@@ -27,7 +27,7 @@ server:
 
 eureka:
   instance:
-    hostname: ${EUREKA_HOST:localhost}
+    hostname: ${AUTH_HOST:localhost}
   client:
     service-url:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
