--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: ${EUREKA_HOST:localhost}
+    hostname: ${GATEWAY_HOST:localhost}
   client:
     service-url:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
