--- a/service-match-user/src/main/resources/application.yml
+++ b/service-match-user/src/main/resources/application.yml
@@ -21,7 +21,7 @@ server:
 
 eureka:
   instance:
-    hostname: ${EUREKA_HOST:localhost}
+    hostname: ${MATCH_USER_HOST:localhost}
   client:
     service-url:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
