--- a/service-padel-court/pom.xml
+++ b/service-padel-court/pom.xml
@@ -80,6 +80,10 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-core</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
