--- a/service-padel-match/src/main/resources/application.yml
+++ b/service-padel-match/src/main/resources/application.yml
@@ -21,7 +21,7 @@ server:
 
 eureka:
   instance:
-    hostname: ${EUREKA_HOST:localhost}
+    hostname: ${PADEL_MATCH_HOST:localhost}
   client:
     service-url:
       defaultZone: http://${EUREKA_HOST:localhost}:8761/eureka/
