--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -18,6 +18,26 @@ spring:
       discovery:
         locator:
           enabled: true
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowed-origins:
+              - "http://localhost:4200" # Origen de tu frontend
+            allowed-methods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - OPTIONS
+            allowed-headers:
+              - "*"
+            allow-credentials: true
+            exposed-headers:
+              - "Authorization"
+              - "Content-Type"
+            max-age: 3600
+
+
       routes:
         - id: auth
           uri: lb://msvc-auth
