FIX Duplicated CORS config. Centralize it in gateway.

--- a/service-gateway/src/main/resources/application.yml
+++ b/service-gateway/src/main/resources/application.yml
@@ -30,7 +30,10 @@ spring:
               - DELETE
               - OPTIONS
             allowed-headers:
-              - "*"
+              - Authorization
+              - Content-Type
+              - Origin
+              - Accept
             allow-credentials: true
             exposed-headers:
               - "Authorization"
