--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,16 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.mls.padel</groupId>
+		<artifactId>Padel-microservices</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.mls.padel</groupId>
-	<artifactId>Padel-microservices</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Padel-microservices</name>
-	<description>Padel matches management microservices.</description>
+	<groupId>com.mls.common</groupId>
+	<artifactId>common</artifactId>
+	<version>0.0.1</version>
+	<name>common</name>
+	<description>Spring Boot Common</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -26,18 +25,6 @@
 		<tag/>
 		<url/>
 	</scm>
-	<packaging>pom</packaging>
-	<modules>
-		<module>service-auth</module>
-		<module>service-padel-court</module>
-		<module>service-user</module>
-		<module>service-eureka</module>
-		<module>service-gateway</module>
-		<module>service-padel-match</module>
-		<module>service-match-user</module>
-		<module>service-notification</module>
-		<module>common</module>
-	</modules>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -69,7 +56,6 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>1.18.36</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
