FIX pom changes.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,9 +5,9 @@
 	<parent>
 		<groupId>com.mls.padel</groupId>
 		<artifactId>Padel-microservices</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
-	<groupId>com.mls.common</groupId>
+	<groupId>com.mls.padel</groupId>
 	<artifactId>common</artifactId>
 	<version>0.0.1</version>
 	<name>common</name>
