--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.mls.padel</groupId>
 	<artifactId>Padel-microservices</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Padel-microservices</name>
 	<description>Padel matches management microservices.</description>
 	<url/>
@@ -28,15 +28,15 @@
 	</scm>
 	<packaging>pom</packaging>
 	<modules>
+		<module>common</module>
+		<module>service-notification</module>
+		<module>service-padel-match</module>
 		<module>service-auth</module>
 		<module>service-padel-court</module>
 		<module>service-user</module>
 		<module>service-eureka</module>
 		<module>service-gateway</module>
-		<module>service-padel-match</module>
 		<module>service-match-user</module>
-		<module>service-notification</module>
-		<module>common</module>
 	</modules>
 	<properties>
 		<java.version>21</java.version>
