--- a/service-eureka/pom.xml
+++ b/service-eureka/pom.xml
@@ -5,9 +5,8 @@
 	<parent>
 		<groupId>com.mls.padel</groupId>
 		<artifactId>Padel-microservices</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
-	<groupId>com.mls.service.eureka</groupId>
 	<artifactId>service-eureka</artifactId>
 	<version>0.0.1</version>
 	<name>service-eureka</name>
