FIX consumer config. Kafka now working properly.

--- a/service-notification/src/main/resources/application.yml
+++ b/service-notification/src/main/resources/application.yml
@@ -6,13 +6,16 @@ spring:
     consumer:
       group-id: padel-match-group
       auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.type.mapping: "com.mls.service.padel_match.event.CreateMatchEvent:com.mls.service.notification.event.CreateMatchEvent"
+        spring.json.trusted.packages: "com.mls.service.notification.event"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    topic:
-      create-match: create-match
 
 server:
   port: 8087
