--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,23 @@ services:
       retries: 5
       start_period: 30s
 
+  msvc-notification:
+    build: ./service-notification
+    ports:
+      - "8087:8087"
+    environment:
+      - EUREKA_HOST=msvc-eureka
+      - KAFKA_HOST=${KAFKA_HOST}
+      - NOTIFICATION_HOST=${NOTIFICATION_HOST}
+    networks:
+      - spring
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8761/actuator/health" ]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
   msvc-gateway:
     build: ./service-gateway
     ports:
