--- a/service-notification/Dockerfile
+++ b/service-notification/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 ARG JAR_FILE=target/service-notification-0.0.1.jar
 COPY ${JAR_FILE} service-notification.jar
 EXPOSE 8087
-ENTRYPOINT ["java", "-jar", "service-match-user.jar"]
+ENTRYPOINT ["java", "-jar", "service-notification.jar"]
