--- a/service-padel-match/src/main/resources/application.yml
+++ b/service-padel-match/src/main/resources/application.yml
@@ -21,12 +21,10 @@ spring:
       group-id: padel-match-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    topic:
-      create-match: create-match
 
 server:
   port: 8082
