--- a/service-user/src/main/resources/application.yml
+++ b/service-user/src/main/resources/application.yml
@@ -15,6 +15,13 @@ spring:
     show-sql: true
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+file:
+  upload-dir: ${FILE_UPLOAD_DIR:/app/uploads}
 
 server:
   port: 8081
