--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<packaging>pom</packaging>
 	<modules>
+		<module>commons</module>
 		<module>service-notification</module>
 		<module>service-padel-match</module>
 		<module>service-auth</module>
